# baby-rgit

./: .gitignore  Cargo.toml  NOTES.md  README.md
.dircache/: index
src/: cache.rs  cmd.rs  lib.rs
tests/: cli.rs
