[package]
name = "baby-rgit"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.3"
thiserror = "^1.0"
bitflags = "^1.2"
flate2 = "1.0.20"
serde = { version = "^1.0", features = ["derive"] }
bincode = "^1.3"