[package]
name = "baby-rgit"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "init_db"
test = false
doctest = false

[dependencies]
sha2 = "0.9.3"
thiserror = "^1.0"
flate2 = "1.0.20"
serde = { version = "^1.0", features = ["derive"] }
bincode = "^1.3"
bitflags = "1.2.1"

[dev-dependencies]
tempfile = "3.2.0"
rand = "^0.8"
