[package]
name = "baby-rgit"
version = "0.1.1"
authors = ["ivfranco <ivfranco33@protonmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[[bin]]
name = "init_db"
test = false
doctest = false

[[bin]]
name = "update_cache"
test = false
doctest = false

[[bin]]
name = "write_tree"
test = false
doctest = false

[[bin]]
name = "read_tree"
test = false
doctest = false

[[bin]]
name = "commit_tree"
test = false
doctest = false

[dependencies]
sha2 = "0.9.3"
flate2 = "1.0.20"
serde = { version = "^1.0", features = ["derive"] }
bincode = "^1.3"
bitflags = "1.2.1"
anyhow = "1.0.39"
thiserror = "1.0.24"
argh = "^0.1"
difference = "2.0.0"

[dev-dependencies]
tempfile = "3.2.0"
rand = "^0.8"
assert_cmd = "1.0.3"
predicates = "1.0.7"
walkdir = "2.3.2"

